# advcmp-2024

./: .gitignore  README.md  setup.sh
.container/: Dockerfile  cleanup.sh  deploy.sh
.container/script/: update-alternatives-llvm.sh
advcmp/: build.sh  build2.sh  commands.txt  test.c  test.ll  test.out  test.sh  test2.sh
advcmp/.cache/clangd/index/: InstructionCounter.cpp.C80A11576FBF6603.idx  InstructionCounter.h.E1536250FEA89320.idx  SimpleSCCP.cpp.30CD95D611FB5715.idx  SimpleSCCP.h.A71F42C5BB96463E.idx  SparseDataflowFramework.cpp.96876F984037F1C4.idx  SparseDataflowFramework.h.B3FD652740E4F5E8.idx
advcmp/project0/: .main.dot  test.ll
advcmp/project1/: test.c
advcmp/project1/include/: InstructionCounter.h
advcmp/project1/lib/: CMakeLists.txt  InstructionCounter.cpp
advcmp/project2/: input.ll  output.ll  test.ll  test.out
advcmp/project2/include/: SimpleSCCP.h  SparseDataflowFramework.h
advcmp/project2/lib/: CMakeLists.txt  SimpleSCCP.cpp  SparseDataflowFramework.cpp
advcmp/project3/: CMakeLists.txt
advcmp/project3/include/: SimpleSCCP.h
advcmp/project3/lib/: CMakeLists.txt  SimpleSCCP.cpp  SparseDataflowFramework.cpp
